[package]
name = "proof-114514"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/proof-114514"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.108"
itertools = "0.12.0"
dashu = "0.4.0"

[dev-dependencies]

[features]
default = []
