[package]
name = "proof1926"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
dashu = "0.3.1"

[dev-dependencies]

[features]
default = []
